[gd_scene load_steps=28 format=2]

[ext_resource path="res://Enemy3.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemy3/spritesheet44.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemy3/spritesheet45.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 550, 605 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2420, 550, 605 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2420, 550, 605 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1815, 550, 605 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1210, 550, 605 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 605, 550, 605 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 550, 605 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 550, 605 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 605, 550, 605 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1210, 550, 605 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1815, 550, 605 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2420, 550, 605 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "seeking",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": false,
"name": "landing",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "rising",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "falling",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 605, 550, 605 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 550, 605 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 4235, 550, 605 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1210, 550, 605 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1815, 550, 605 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2420, 550, 605 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3025, 550, 605 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3630, 550, 605 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3025, 550, 605 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ) ],
"loop": true,
"name": "landing",
"speed": 6.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "rising",
"speed": 6.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "falling",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 91, 87 )

[node name="Enemy3" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="Shadow" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 17 )
animation = "landing"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1600 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 10 )
animation = "landing"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 18 )
disabled = true

[node name="LandTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SeekingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="LandTimer" to="." method="_on_LandTimer_timeout"]
[connection signal="timeout" from="SeekingTimer" to="." method="_on_SeekingTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
